# claimslake

./: .env.example  .gitignore  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: README.md
bronze/: README.md
config/: README.md
data/: README.md
data/sample/: claims_batch_1_sample.csv  claims_batch_2_sample.csv  diagnoses_sample.csv  members_sample.csv  providers_sample.csv
data_quality/metrics/: README.md
dbt/: README.md
docker/: README.md
docs/architecture/: README.md
docs/data_dictionary/: README.md  silver_schemas.md  source_schemas.md
docs/data_lineage/: README.md
docs/interview_guide/: 02_ingestion_bronze.md  03_pyspark_silver.md  README.md
docs/screenshots/: README.md
ingestion/: README.md  __init__.py  run_ingestion.py
ingestion/config/: sources.yaml
ingestion/metadata/: README.md
ingestion/src/: __init__.py  config_loader.py  file_reader.py  ingestion_engine.py  logger.py  metadata_tracker.py  retry_handler.py  schema_validator.py
processing/bronze/: README.md
processing/gold/: README.md
processing/silver/: README.md
pyspark/: README.md  __init__.py
pyspark/src/: __init__.py  deduplication.py  schemas.py  silver_pipeline.py  spark_session.py  transformations.py  validators.py  writers.py
scripts/: README.md  generate_synthetic_data.py
silver/: README.md
spark_jobs/: README.md  __init__.py
spark_jobs/src/: __init__.py  cleaners.py  readers.py  validators.py  (+3 more)
sql/: README.md
streaming/: README.md
terraform/: README.md
tests/: README.md  __init__.py
(+11 files in other folders)
