# ClaimsLake - project tooling configuration.
#
# Declares the first-party ingestion package as installable (pip install -e .)
# so that "import ingestion.src..." resolves through the installed package,
# and configures pytest test discovery under tests/.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claimslake"
version = "0.1.0"
description = "ClaimsLake ingestion layer (Milestone 2)."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[tool.setuptools]
packages = ["ingestion", "ingestion.src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --import-mode=importlib"
